# claire.observability

./: .env.example  .gitignore  Dockerfile  README.md  claire-kit-formation.html  claire-landing.html  docker-compose.yml  pyproject.toml
.github/workflows/: .gitignore  Dockerfile  ci.yml
app/: __init__.py  main.py
app/agents/: registry.py
app/alerts/: notifier.py
app/anomalies/: classifier.py  engine.py  rules.py
app/api/: routes.py
app/core/: auth.py  config.py  database.py  logging.py  telemetry.py
app/ingestion/: collector.py  normalizer.py
app/integrations/: manager.py
app/models/: db_models.py  schemas.py
app/sdk/: __init__.py  client.py  decorators.py
app/services/: pipeline.py  playbooks.py  rca.py
app/storage/: logs.py  metrics.py
app/web/: __init__.py  routes.py
app/web/static/: main.js  styles.css
app/web/templates/: agents.html  base.html  dashboard.html  demo.html  integrations.html  landing.html  tour.html
deploy/grafana/dashboards/: mira-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
tests/: test_api.py  test_normalizer.py  test_pipeline.py  test_rules.py  test_sdk.py  test_web.py
