[project]
name = "mira-observability"
version = "0.1.0"
description = "MVP observability platform for AI e-commerce agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "aiokafka>=0.11.0",
  "prometheus-client>=0.20.0",
  "influxdb-client>=1.43.0",
  "elasticsearch>=8.14.0",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "python-json-logger>=2.0.7",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
